--- a/pickleBOTfrontend/src/index.css
+++ b/pickleBOTfrontend/src/index.css
@@ -1,7 +1,7 @@
 
 :root {
-
-  color: rgba(255, 255, 255, 0.87);
+  color: white;
+  background-color: #121212;
   /* background-color: #242424; */
 
   font-synthesis: none;
